--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Bicep Buddy</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Welcome to Bicep Buddy</h1>
+<p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
 
 </body>
 </html>
