Moved style into the separate sheet and added comments at the top.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
+<!--
+Author: Bob Rein
+File name: index.html
+Date Created: 1/25/19
+-->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Bicep Buddy</title>
+  <title> Bicep Buddy  </title>
+  <link rel="stylesheet" type="text/css" href="home.css">
+
+
 </head>
 <body>
 
-<h1>Welcome to Bicep Buddy</h1>
-<p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
+  <h1>Welcome to Bicep Buddy</h1>
+  <p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
 
 </body>
 </html>
