--- a/index.html
+++ b/index.html
@@ -7,14 +7,36 @@ Date Created: 1/25/19
 <html>
 <head>
   <title> Bicep Buddy  </title>
-  <link rel="stylesheet" type="text/css" href="home.css">
-
+  <!--<link rel="stylesheet" type="text/css" href="home.css">-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 </head>
 <body>
+  <div class="jumbotron text-center">
+    <h1>Welcome to Bicep Buddy</h1>
+    <p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
+  </div>
 
-  <h1>Welcome to Bicep Buddy</h1>
-  <p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <h3>Column 1</h3>
+        <p>Lorem ipsum dolor..</p>
+        <p>Ut enim ad..</p>
+      </div>
+      <div class="col-sm-4">
+        <h3>Column 2</h3>
+        <p>Lorem ipsum dolor..</p>
+        <p>Ut enim ad..</p>
+      </div>
+      <div class="col-sm-4">
+        <h3>Column 3</h3>
+        <p>Lorem ipsum dolor..</p>
+        <p>Ut enim ad..</p>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
