--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@ Date Created: 1/25/19
 
   </div>
 
-  <div class="container col-xs-12">
+  <div class="col-xs-12 container-full">
     <div class="row">
-      <div class="col-sm-4  col-xs-12 leftCol allCols">
+      <div class="col-md-4  col-xs-12 redBack allCols">
         <h3>Column 1</h3>
         <p>Lorem ipsum dolor..</p>
         <p>Ut enim ad..</p>
       </div>
-      <div class="col-sm-4 col-xs-12 centerCol">
+      <div class="col-md-4 col-xs-12 blueBack">
         <h3>Column 2</h3>
         <p>Lorem ipsum dolor..</p>
         <p>Ut enim ad..</p>
       </div>
-      <div class="col-sm-4 col-xs-12 rightCol">
+      <div class="col-md-4 col-xs-12 greenBack">
         <h3>Column 3</h3>
         <p>Lorem ipsum dolor..</p>
         <p>Ut enim ad..</p>
