Added background gray and took away gap between header and content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Date Created: 1/25/19
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body id= "body">
   <div class="jumbotron text-center">
     <h1>Bicep Buddy</h1>
     <p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
@@ -20,7 +20,7 @@ Date Created: 1/25/19
 
   </div>
 
-  <div class="col-xs-12 container-full">
+  <div class="col-xs-12 container-full noTopMargin">
     <div class="row">
       <div class="col-md-4  col-xs-12 redBack allCols">
         <h3>Column 1</h3>
