Repositioned the group member list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Date Created: 1/25/19
 <body id= "body">
   <div class="jumbotron text-center">
     <h1>Bicep Buddy</h1>
-    <p>Made by Bob, Zac, Michael, Reece, Hunter, and Chase</p>
+
     <p class ="tinyFont"> Do you even lift bro? </p>
 
   </div>
@@ -23,9 +23,15 @@ Date Created: 1/25/19
   <div class="col-xs-12 container-full noTopMargin">
     <div class="row">
       <div class="col-md-4  col-xs-12 redBack allCols">
-        <h3>Column 1</h3>
-        <p>Lorem ipsum dolor..</p>
-        <p>Ut enim ad..</p>
+        <h2> Team Members </h2>
+        <ul>
+          <li>Chase</li>
+          <li>Bob</li>
+          <li>Zac</li>
+          <li>Hunter</li>
+          <li>Michael</li>
+          <li>Reece</li>
+          </ul>
       </div>
       <div class="col-md-4 col-xs-12 blueBack">
         <h3>Column 2</h3>
