Added the project vision and important links section

--- a/index.html
+++ b/index.html
@@ -34,14 +34,28 @@ Date Created: 1/25/19
           </ul>
       </div>
       <div class="col-md-4 col-xs-12 blueBack">
-        <h3>Column 2</h3>
-        <p>Lorem ipsum dolor..</p>
-        <p>Ut enim ad..</p>
+        <h3>Project Vision </h3>
+        <p>Going to the gym alone is a bummer.</p>
+
+<p>But the gym doesn’t have to be a scary place when you go with a buddy.</p>
+
+<p>The goal of our software is to improve your workout experience by pairing you with the best Bicep Buddy possible. </p>
+<p>
+Go get those gains!
+</p>
       </div>
       <div class="col-md-4 col-xs-12 greenBack">
-        <h3>Column 3</h3>
-        <p>Lorem ipsum dolor..</p>
-        <p>Ut enim ad..</p>
+        <h3>Important Links </h3>
+        <ul>
+
+            <li> <a href="https://www.google.com">Issue Tracking</a></li>
+            <li> <a href="https://www.google.com">Git</a></li>
+            <li> <a href="https://www.google.com">Hours</a></li>
+            <li> <a href="https://www.google.com">Iteration I</a></li>
+            <li> <a href="https://www.google.com">Iteration II</a></li>
+            <li> <a href="https://www.google.com">Iteration III</a></li>
+            <li> <a href="https://www.google.com">Final Project</a></li>
+        </ul>
       </div>
     </div>
 
