Put names on cards and removed color from the page

--- a/index.html
+++ b/index.html
@@ -20,34 +20,32 @@ Date Created: 1/25/19
 
   </div>
 
-  <div class="col-xs-12 container-full noTopMargin">
+  <div class="col-xs-12 container-full ">
     <div class="row">
-      <div class="col-md-4  col-xs-12 redBack allCols">
+      <div class="col-md-1 container"></div>
+      <div class="col-md-2 container col-xs-12 allCols text-center">
         <h2> Team Members </h2>
-        <ul>
-          <li>Chase</li>
-          <li>Bob</li>
-          <li>Zac</li>
-          <li>Hunter</li>
-          <li>Michael</li>
-          <li>Reece</li>
-          </ul>
-      </div>
-      <div class="col-md-4 col-xs-12 blueBack">
+                <div class="card card-content "><h4>Bob</h4></div>
+                <div class="card card-content "><h4>Chase</h4></div>
+                <div class="card card-content "><h4>Reece</h4></div>
+                <div class="card card-content "><h4>Hunter</h4></div>
+                <div class="card card-content "><h4>Michael</h4></div>
+                <div class="card card-content "><h4>Zac</h4></div>
+        </div>
+      <div class="col-md-4 col-xs-12allCols">
         <h3>Project Vision </h3>
         <p>Going to the gym alone is a bummer.</p>
 
-<p>But the gym doesn’t have to be a scary place when you go with a buddy.</p>
+        <p>But the gym doesn’t have to be a scary place when you go with a buddy.</p>
 
-<p>The goal of our software is to improve your workout experience by pairing you with the best Bicep Buddy possible. </p>
-<p>
-Go get those gains!
-</p>
+        <p>The goal of our software is to improve your workout experience by pairing you with the best Bicep Buddy possible. </p>
+        <p>
+        Go get those gains!
+        </p>
       </div>
-      <div class="col-md-4 col-xs-12 greenBack">
+      <div class="col-md-4 col-xs-12 allCols">
         <h3>Important Links </h3>
         <ul>
-
             <li> <a href="https://www.google.com">Issue Tracking</a></li>
             <li> <a href="https://www.google.com">Git</a></li>
             <li> <a href="https://www.google.com">Hours</a></li>
@@ -57,6 +55,7 @@ Go get those gains!
             <li> <a href="https://www.google.com">Final Project</a></li>
         </ul>
       </div>
+      <div class="col-md-1 container"></div
     </div>
 
   </div>
