Added actual links for Issue Tracking, Git, and Hours. Made others blank

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ Date Created: 1/25/19
       <div class="col-md-4 col-xs-12 allCols">
         <h3>Important Links </h3>
         <ul>
-            <li> <a href="https://www.google.com">Issue Tracking</a></li>
-            <li> <a href="https://www.google.com">Git</a></li>
-            <li> <a href="https://www.google.com">Hours</a></li>
-            <li> <a href="https://www.google.com">Iteration I</a></li>
-            <li> <a href="https://www.google.com">Iteration II</a></li>
-            <li> <a href="https://www.google.com">Iteration III</a></li>
-            <li> <a href="https://www.google.com">Final Project</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/issues">Issue Tracking</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy">Git</a></li>
+            <li> <a href="https://docs.google.com/spreadsheets/d/1iwM6Do26X9s-1RR6j4uADIMu1LG3YPW-dS3hHYlYlTo/edit?usp=sharing">Hours</a></li>
+            <li> <a href="#">Iteration I</a></li>
+            <li> <a href="#">Iteration II</a></li>
+            <li> <a href="#">Iteration III</a></li>
+            <li> <a href="#">Final Project</a></li>
         </ul>
       </div>
       <div class="col-md-1 container"></div
