Added the master pdf download

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Date Created: 1/25/19
             <li> <a href="https://github.com/ChaseManseth/BicepBuddy/issues">Issue Tracking</a></li>
             <li> <a href="https://github.com/ChaseManseth/BicepBuddy">Git</a></li>
             <li> <a href="https://docs.google.com/spreadsheets/d/1iwM6Do26X9s-1RR6j4uADIMu1LG3YPW-dS3hHYlYlTo/edit?usp=sharing">Hours</a></li>
-            <li> <a href="#">Iteration I</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/raw/master/MASTER_PDF.pdf">Iteration I</a></li>
             <li> <a href="#">Iteration II</a></li>
             <li> <a href="#">Iteration III</a></li>
             <li> <a href="#">Final Project</a></li>
