--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ Date Created: 1/25/19
             <li> <a href="https://github.com/ChaseManseth/BicepBuddy">Git</a></li>
             <li> <a href="https://docs.google.com/spreadsheets/d/1iwM6Do26X9s-1RR6j4uADIMu1LG3YPW-dS3hHYlYlTo/edit?usp=sharing">Hours</a></li>
             <li> <a href="https://github.com/ChaseManseth/BicepBuddy/raw/master/Bicep_Buddy_Iteration_1.zip">Iteration I</a></li>
-            <li> <a href="#">Iteration II</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/blob/master/Bicep%20Buddy%20Iteration%202.zip?raw=true">Iteration II</a></li>
             <li> <a href="#">Iteration III</a></li>
             <li> <a href="#">Final Project</a></li>
         </ul>
