--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ Date Created: 1/25/19
         <p>
         Go get those gains!
         </p>
+
+        <iframe width="420" height="315"
+            src="https://www.youtube.com/watch?v=S3sFWq5Bjio&feature=youtu.be">
+        </iframe>
       </div>
       <div class="col-md-4 col-xs-12 allCols">
         <h3>Important Links </h3>
