redid the layout and got the video working

--- a/index.html
+++ b/index.html
@@ -15,52 +15,68 @@ Date Created: 1/25/19
 <body id= "body">
   <div class="jumbotron text-center">
     <h1>Bicep Buddy</h1>
-
     <p class ="tinyFont"> Do you even lift bro? </p>
-
   </div>
 
   <div class="col-xs-12 container-full ">
     <div class="row">
       <div class="col-md-1 container"></div>
-      <div class="col-md-2 container col-xs-12 allCols text-center">
+
+      <div class="col-md-3 container col-xs-12 allCols text-left">
+        <h2>Project Vision </h2>
+        <p>Going to the gym alone is a bummer.</p>
+        <p>But the gym doesn’t have to be a scary place when you go with a buddy.</p>
+        <p>The goal of our software is to improve your workout experience by pairing you with the best Bicep Buddy possible. </p>
+        <p>Go get those gains!</p>
+      </div>
+
+      <div class="col-md-4 container col-xs-12 allCols text-left">
+        <h2>Download and Run Steps:</h2>
+        <ol>
+          <li> Download <a href="https://drive.google.com/open?id=1BHWvxEr9uEvaWmTpxxxUf2AIDnZja-TQ">Iteration III</a>.</li>
+          <li> Unzip the zip file.</li>
+          <li> Open folder "Bicep Buddy Iteration 3".</li>
+          <li> Open folder "BicepBudyApp".</li>
+          <li> Double click on "BicepBudyApp.jar".</li>
+        </ol>
+      </div>
+
+      <div class="col-md-3 container col-xs-12 allCols text-left">
+        <h2>Important Links </h2>
+        <ul>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/issues">Issue Tracking</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy">Git</a></li>
+            <li> <a href="https://docs.google.com/spreadsheets/d/1RbTjZUJLGEsJas_d7oOlNiuwiqxIj2NT8DxHtYCq14s/edit?usp=sharing">Hours</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/raw/master/Bicep_Buddy_Iteration_1.zip">Iteration I</a></li>
+            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/blob/master/Bicep%20Buddy%20Iteration%202.zip?raw=true">Iteration II</a></li>
+            <li> <a href="https://drive.google.com/open?id=1BHWvxEr9uEvaWmTpxxxUf2AIDnZja-TQ">Iteration III</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-1 container"></div>
+    </div>
+  </div>
+
+  <div class="col-xs-12 container-full ">
+    <div class="row">
+      <div class="col-md-2 container"></div>
+      <div class="col-md-5 container col-xs-12 allCols text-center">
+        <iframe width="410" height="315"
+            src="https://www.youtube.com/embed/S3sFWq5Bjio">
+        </iframe>
+      </div>
+      <div class="col-md-1 container"></div>
+      <div class="col-md-3 container col-xs-12 allCols text-center">
         <h2> Team Members </h2>
                 <div class="card card-content "><h4>Bob</h4></div>
                 <div class="card card-content "><h4>Chase</h4></div>
                 <div class="card card-content "><h4>Reece</h4></div>
                 <div class="card card-content "><h4>Hunter</h4></div>
                 <div class="card card-content "><h4>Zac</h4></div>
-        </div>
-      <div class="col-md-4 col-xs-12allCols">
-        <h3>Project Vision </h3>
-        <p>Going to the gym alone is a bummer.</p>
-
-        <p>But the gym doesn’t have to be a scary place when you go with a buddy.</p>
-
-        <p>The goal of our software is to improve your workout experience by pairing you with the best Bicep Buddy possible. </p>
-        <p>
-        Go get those gains!
-        </p>
-
-        <iframe width="420" height="315"
-            src="https://www.youtube.com/watch?v=S3sFWq5Bjio&feature=youtu.be">
-        </iframe>
       </div>
-      <div class="col-md-4 col-xs-12 allCols">
-        <h3>Important Links </h3>
-        <ul>
-            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/issues">Issue Tracking</a></li>
-            <li> <a href="https://github.com/ChaseManseth/BicepBuddy">Git</a></li>
-            <li> <a href="https://docs.google.com/spreadsheets/d/1iwM6Do26X9s-1RR6j4uADIMu1LG3YPW-dS3hHYlYlTo/edit?usp=sharing">Hours</a></li>
-            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/raw/master/Bicep_Buddy_Iteration_1.zip">Iteration I</a></li>
-            <li> <a href="https://github.com/ChaseManseth/BicepBuddy/blob/master/Bicep%20Buddy%20Iteration%202.zip?raw=true">Iteration II</a></li>
-            <li> <a href="#">Iteration III</a></li>
-            <li> <a href="#">Final Project</a></li>
-        </ul>
-      </div>
+
       <div class="col-md-1 container"></div
     </div>
-
   </div>
 
 </body>
