added some padding

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Date Created: 1/25/19
     <p class ="tinyFont"> Do you even lift bro? </p>
   </div>
 
-  <div class="col-xs-12 container-full ">
+  <div class="col-xs-12 container-full " style="padding:2%">
     <div class="row">
       <div class="col-md-1 container"></div>
 
@@ -58,11 +58,11 @@ Date Created: 1/25/19
     </div>
   </div>
 
-  <div class="col-xs-12 container-full ">
+  <div class="col-xs-12 container-full " style="padding:2%">
     <div class="row">
       <div class="col-md-2 container"></div>
       <div class="col-md-5 container col-xs-12 allCols text-center">
-        <iframe width="480" height="270"
+        <iframe max-width="480" width="100%" height="270"
             src="https://www.youtube.com/embed/S3sFWq5Bjio">
         </iframe>
       </div>
