--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ Date Created: 1/25/19
 
   <div class="col-xs-12 container-full " style="padding:2%">
     <div class="row">
-      <div class="col-md-2 container"></div>
-      <div class="col-md-5 container col-xs-12 allCols text-center">
-        <iframe max-width="480" width="100%" height="270"
+      <div class="col-md-3 container"></div>
+      <div class="col-md-4 container col-xs-12 allCols text-center">
+        <iframe  width="100%" max-width="480" height="270"
             src="https://www.youtube.com/embed/S3sFWq5Bjio">
         </iframe>
       </div>
